--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,8 @@ vignettes/*.pdf
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
 
+# ide
+.idea/
 
 # Mac General
 .DS_Store
